# glyph_ros2_ws

./: .gitmodules  GO2_JAILBROKEN_SDK_GUIDE.md  README.md  README.md.save
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
src/docker/: Dockerfile  docker-compose.yml  entrypoint.sh  requirements-docker.txt
src/go2_navigation/: package.xml  setup.py
src/go2_navigation/config/: nav_to_pose_with_reorient_recovery.xml  rlsar_nav2_localization.yaml  rlsar_nav2_localization_mppi.yaml  robot_nav2_localization.yaml  robot_nav2_localization_mppi.yaml
src/go2_navigation/go2_navigation/: cmd_vel_arbiter.py  global_localization_trigger.py  goal_tolerance_marker.py  gpio_flavor_selection.py  gpio_platform.py  gpio_return_home_publisher.py  initial_pose_publisher.py  initial_pose_restamper.py  lidar_odom_bridge.py  location_subscriber.py  mapping_pose_reanchor.py  odom_ready_gate.py  pointcloud_restamper.py  scan_restamper.py  session_map_publisher.py  sim_behavior_supervisor.py  sim_fall_recovery.py  (+3 more)
src/go2_robot_sdk/: setup.cfg  setup.py
src/go2_unitree_bridge/: package.xml  setup.cfg  setup.py
src/go2_unitree_bridge/config/: robot_ekf.yaml
src/go2_unitree_bridge/go2_unitree_bridge/: bridge_node.py  costmap_markers.py  rlsar_obstacle_markers.py  rlsar_scan_node.py  robot_description_publisher.py
src/go2_unitree_bridge/launch/: go2_rlsar_sim.launch.py  go2_unitree_bridge.launch.py
src/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/launch/: README.md  unified_launch.py
src/log/: latest_build
(+1781 files in other folders)
