<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>go2_unitree_bridge</name>
  <version>0.1.0</version>
  <description>ROS 2 bridge for Unitree Go2 using the official unitree_ros2 topics.</description>
  <maintainer email="maintainer@example.com">ming</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>visualization_msgs</depend>
  <depend>unitree_go</depend>
  <depend>unitree_api</depend>

  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>foxglove_bridge</exec_depend>
  <exec_depend>unitree_go2_description</exec_depend>
  <exec_depend>xacro</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
